# webserv

./: .gitignore  CMakeLists.txt  DATAMODEL.md  Makefile  README.md  TODO  ToDo  basic.conf  datastructure.md  not_server  sources.txt  test  test.html  webserv
.github/workflows/: Catch2_unit_tester.yml  debian_comp.yml  macos_comp.yml  ubuntu_comp.yml
OLDFILES/: oldREADME.md  oldmakefile
OldExchange /: Exchange.hpp  Request.cpp  Respond.cpp  Respond.hpp
OldExchange /Methods/: ResponsePost.cpp
OldParser/: Location.cpp  Location.hpp  Parser.cpp  Server.cpp  Server.hpp
YoupiBanane/: tester.conf
client/: main.cpp
conf/: basic.conf  config.MD
config_tester/: correct_basic.conf  correct_multiple_servers.conf  server_multiple_opening_brackets.conf  server_no_closing_bracket.conf
data/: CMakeLists.txt
data/conf/: bare.conf  basic.conf  basic_cgi_test.conf  default.conf  server_plus_more_words_fail.conf
data/www/: DefaultPage.html  Error404.html  UploadFile.html  default_file.html  favicon.html  index.css  index.html  space test.html  test.html
data/www/cgi-bin/: execute_me.py
data/www/cgi-bin/cpp/: hello
data/www/cgi-bin/python/: default.css  execute_me.py  form.py  index1.html  menu.css
data/www/location/: UploadFile.html  index.html
data/www/php/: NotCool.html  index.html
inc/: Cgi.hpp  Client.hpp  Constants.hpp  Exchange.hpp  Generator.hpp  Location.hpp  Macros.hpp  Network.hpp  Parse.hpp  Poller.hpp  Request.hpp  Respond.hpp  Server.hpp  Utilities.hpp
inc/Exchange/: Exchange.hpp  Respond.cpp
inc/Utilities/: findCharLocation.cpp  readFile.cpp
main_website_folder/: web.conf
main_website_folder/www/cgi-bin/: form_isindex.py
src/: Cgi.cpp  Client.cpp  Config.hpp  Exchange.cpp  Exchange.hpp  Generator.cpp  HeaderParse.cpp  HeaderParse.hpp  Location.cpp  Network.cpp  Parse.cpp  Poller.cpp  Server.cpp  Server.hpp  errorCheckListForParser  main.cpp  x_main.cpp
src/.ex/: Exchange.k
src/Exchange/: Exchange.cpp  Exchange.hpp  Request.cpp  Request.hpp  Respond.cpp  Respond.hpp
src/Exchange/Methods/: ResponseDelete.cpp  ResponseGet.cpp  ResponsePost.cpp
src/OldParser/: Parser.hpp
src/Utilities/: TOSTRING.cpp  defaultStatusPage.cpp  deleteFile.cpp  ft_stoi.cpp  isDirectory.cpp  readFile.cpp  splitLineWithStrtok.cpp
tester/: CMakeLists.txt
tester/confs/Invalid/: ClientBodySizeWithoutDigit.conf  DuplicateListen.conf  DuplicateServerName.conf  EmptyLine.conf  NoBracketLocation.conf  NoBracketServer.conf  NoClientBodySize.conf  NoIndex.conf  NoListen.conf  NoListenValue.conf  NoLocationAutoIndex.conf  NoLocationCgiExt.conf  NoLocationCgiName.conf  NoLocationIndex.conf  NoLocationMethods.conf  NoLocationName.conf  NoLocationRoot.conf  NoNameLocation.conf  NoRoot.conf  NoServerName.conf  NoStartParentheses.conf  NonImplementedMethod.conf
tester/confs/Valid/: ComplexConfig.conf  EmptyLine.conf  EmptyLocation.conf  MethodWithNoinput.conf  Minimal.conf  MoreListen.conf  MoreListenDup.conf  MultipleListen.conf  MultipleServers.conf  NoLocation.conf  NoServerName.conf  NoStartParentheses.conf  ShortIndex.conf  basic.conf  basic_location.conf  basic_no_location.conf
tester/data/: a_file.txt
tester/inc/: webserv.h
tester/src/: ConfTest.cpp  ResponderTests.cpp  ThrowTests.cpp
